# homework_6.2

./: .env.sample  .gitignore  README.md  categories.json  category_data.json  data_catalog.json  data_users.json  product_data.json  products.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_blog.py  0002_product_owner.py  0003_alter_blog_image.py  0003_alter_product_options_product_is_published.py  0003_product_is_published.py  0004_version.py  0005_alter_version_options_alter_version_is_active_and_more.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html  catalog.html  categories.html  contact_info.html  home_page.html  not_login.html  one_product.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  version_form.html
catalog/templatetags/: mediapath.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_user_code_verification.py  0004_remove_user_code_verification_user_code_and_more.py
users/templates/users/: code.html  login.html  register.html  user_form.html
